set up website, will add/clean content later

--- a/dsh/home.html
+++ b/dsh/home.html
@@ -4,10 +4,20 @@
 	<meta charset="utf-8">
 	<title>Drexel Smart House</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<script type="text/javascript" src="script.js"></script>
 </head>
 
 <body>
-	<h1>Drexel Smart House</h1>
+	<div class="navbar" id="navbar">
+		<a href="javascript:contentAbout()">about</a>
+		<a href="javascript:contentContact()">contact</a>
+		<a href="javascript:contentHowTo()">how-to</a>
+	</div>
+
+	<div id="content">
+		Hi! We are Drexel Smart House. Mission statement vision statement etc etc
+	</div>
+
 </body>
 
 </html>
